Port to 1.18.2, many random fixes